Bug 793634 - Force builds to be compatible with gtk 2.18/glib 2.22. r=karlt